fix: z-index container

--- a/assets/css/layouts/_grid.scss
+++ b/assets/css/layouts/_grid.scss
@@ -119,6 +119,7 @@
 
 *:has(> .l-grid) {
 	container: lgrid / inline-size;
+	z-index: 1;
 }
 
 @container lgrid (width < 320px) {
